# urbem

./: .coveragerc  Makefile  README.md  environment.lock.yml  environment.yml  setup.cfg  setup.py  spatial_data_rome.ipynb
data/processed/: Roma_Zone_Urbanistiche__with_betweenness_centrality.dbf
docs/: commands.rst  conf.py  index.rst  project_organization.rst
docs/getting_started/: ENVIRONMENT.rst  INSTALL.rst  getting_started.rst
notebooks/: 0.1-spatial_data_rome.ipynb  0.2-get_covariates.ipynb  0.2.1-road_type_features.ipynb  0.3-data_validation.ipynb  0.3-merge_emissions_data.ipynb  0.3.1-plot_data_maps.ipynb  0.3_merge_emissions_data.ipynb  0.4-data_validation.ipynb  0.5-global_spatial_autocorrelation.ipynb  0.6-global_spatial_autocorrelation.ipynb  0.7-local_spatial_autocorrelation.ipynb  0.8-non_spatial_regression.ipynb  0.9-non_spatial_regression_sklearn.ipynb  0.9.1-random_forest_regressor_sklearn.ipynb  1.0-spatial_regression_GWR.ipynb  get_covariates.ipynb
src/urbem/features/: selection.py
tests/: test_urbem.py
